--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,9 @@
-version: '3.7'
+version: '3.8'
 services:
   arangodb:
     image: arangodb:latest
     environment:
-      ARANGO_ROOT_PASSWORD: password
+      ARANGO_ROOT_PASSWORD: password  # Username: root
     ports:
       - 8529:8529
     volumes:
