Changes app setting to default value

--- a/wiki-scraper/app.env
+++ b/wiki-scraper/app.env
@@ -1,5 +1,5 @@
-#CRAWLER_SEED_URL="https://en.wikipedia.org/wiki/Animal"
-CRAWLER_SEED_URL="https://en.wikipedia.org/wiki/Eunice_aphroditois"
+CRAWLER_SEED_URL="https://en.wikipedia.org/wiki/Animal"
+#CRAWLER_SEED_URL="https://en.wikipedia.org/wiki/Eunice_aphroditois"
 CRAWLER_ALLOWED_DOMAIN="en.wikipedia.org"
 CRAWLER_REGEX_URL_WIKI_NO_FILES="https://en.wikipedia.org/wiki/[^File:].+"
 CRAWLER_MAX_TREE_DEPTH=10 # TODO : Most optimal search for full list of species.
