Uses cytoscape-cola force-directed layout

--- a/graph-vis/frontend/package.json
+++ b/graph-vis/frontend/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "cytoscape": "^3.25.0",
-    "cytoscape-fcose": "^2.2.0",
+    "cytoscape-cola": "^2.5.1",
     "vue": "^3.2.47"
   },
   "devDependencies": {
